--- a/web-app/src/App.css
+++ b/web-app/src/App.css
@@ -16,3 +16,11 @@
   height:100vh;
   margin-left: 10px;
 }
+
+.center-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+}
