--- a/web-app/src/App.css
+++ b/web-app/src/App.css
@@ -24,3 +24,9 @@
   flex-direction: column;
   height: 100vh;
 }
+
+table, th, td {
+  border: 2px solid black;
+  border-collapse: collapse;
+  padding: 10px;
+}
